src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/row_too_big.bgs
FIELD
11 x 8 | 2

ISLANDS
( 0, 0 | 1 )
( 0, 8 | 1 )

BRIDGES
( 0, 1 | false )
